23-gateway-api/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo
          args:
            - "-text=AUTH SERVICE"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 5678
