23-gateway-api/auth-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      version: v2
  template:
    metadata:
      labels:
        app: auth
        version: v2
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo
          args:
            - "-text=AUTH V2 CANARY"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: auth-v2
spec:
  selector:
    app: auth
    version: v2
  ports:
    - port: 80
      targetPort: 5678
