23-gateway-api/dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo
          args:
            - "-text=DASHBOARD SERVICE"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 5678
