23-gateway-api/httproute-auth-canaray.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-canary
  namespace: default          # <-- HTTPRoute namespace
spec:
  parentRefs:
    - name: traefik-gateway   # <-- Gateway name
      namespace: traefik      # <-- Gateway namespace
      sectionName: web        # <-- listener name
  hostnames:
    - joybassey.online             # <-- optional, restrict to this host
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: auth
          namespace: default   # <-- Service namespace
          port: 80
          weight: 90
        - name: auth-v2
          namespace: default   # <-- Service namespace
          port: 80
          weight: 10
