23-gateway-api/httproute-host.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: host-routing
  namespace: default         # <--- put the namespace of your HTTPRoute
spec:
  parentRefs:
    - name: traefik-gateway   # <-- must match your Traefik Gateway name
      namespace: traefik      # <-- include if Gateway is in a different namespace
      sectionName: web        # <-- optional, refers to listener name
  hostnames:
    - auth.joybassey.online
    - dashboard.joybassey.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auth     # <-- match the Service name
          namespace: default  # <-- include if Service is in a different namespace
          port: 80
