23-gateway-api/httproute-path.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-routing
  namespace: default         # <-- namespace for the HTTPRoute
spec:
  parentRefs:
    - name: traefik-gateway   # <-- Gateway name
      namespace: traefik      # <-- Gateway namespace
      sectionName: web        # <-- listener name on the Gateway
  hostnames:
    - joybassey.online            # <-- optional, only route requests for this host
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: auth          # <-- Service name
          namespace: default  # <-- Service namespace
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: dashboard     # <-- Service name
          namespace: default  # <-- Service namespace
          port: 80
